<?xml version="1.0" encoding="UTF-8"?>
<!--
  Millions – IDATT2003 group project (Maven build).
  Builds with Java 25, runs via javafx-maven-plugin, and generates JavaDoc on package.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>idatt2003_grp6_millions</artifactId>
  <version>1.0-SNAPSHOT</version>

  <!-- Centralized version management for dependencies, plugins, and Java -->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>25</java.version>

    <!-- Required course dependencies -->
    <javafx.version>25.0.1</javafx.version>
    <junit.version>6.0.1</junit.version>

    <!-- Project-specific dependencies -->
    <commonmark.version>0.22.0</commonmark.version>
    <jackson.version>2.21.2</jackson.version>

    <!-- Required course plugins -->
    <maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
    <maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>
    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
    <maven.javadoc.plugin.version>3.12.0</maven.javadoc.plugin.version>
  </properties>

  <dependencies>

    <!-- Required: JavaFX UI controls (course dependency) -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <!-- Project: WebView for rendering Markdown/HTML in the Learning Hub -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <!-- Project: Markdown to HTML conversion for learning content -->
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark</artifactId>
      <version>${commonmark.version}</version>
    </dependency>

    <!-- Required: JUnit 5 for unit tests (course dependency) -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Project: JSON serialization for profiles and learning content -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <!-- Compiles source with Java 25 (course plugin) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <release>${java.version}</release>
        </configuration>
      </plugin>

      <!-- Runs JUnit 5 tests during mvn test / mvn package (course plugin) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.plugin.version}</version>
      </plugin>

      <!-- Runs the JavaFX app via mvn javafx:run (course plugin) -->
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>${javafx.maven.plugin.version}</version>
        <configuration>
          <mainClass>view.app.MillionsApp</mainClass>
        </configuration>
      </plugin>

      <!-- Generates and attaches JavaDoc JAR during package (course plugin) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven.javadoc.plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

</project>
